# odoo_dataset_creation_technical

./: .env.example  .gitignore  README_COLAB.md  README_KAGGLE.md  RESUME_INSTRUCTIONS.md  Run_on_Google_Colab.ipynb  Run_on_Kaggle.ipynb  generate_odoo_dataset.py  pyproject.toml  requirements.txt
